--- a/main.css
+++ b/main.css
@@ -1,18 +1,21 @@
 body {
+  /* background-color: #000000; */
+  background-image: linear-gradient(to top right, black, navy);
+  padding-top: 100px;
+}
+
+#background {
+  /* border: 1px solid #ff00ff; */
   background-color: #000000;
   background-image: url("tree.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  margin: auto;
+  width: 675;
+  height: 500;
 }
 
 #outside {
-  position: fixed;
-
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  /*border: 10px solid #ff0000;*/
+  margin: auto;
+  width: 675;
+  height: 500;
+  /* border: 1px solid #ff0000; */
 }
