--- a/index.css
+++ b/index.css
@@ -1,21 +1,11 @@
 body {
-  /* background-color: #000000; */
-  background-image: linear-gradient(to top right, black, navy);
-  padding-top: 100px;
-}
-
-#background {
-  /* border: 1px solid #ff00ff; */
+  /*background-image: linear-gradient(to top , black, navy, black);*/
   background-color: #000000;
-  background-image: url("tree.jpg");
-  margin: auto;
-  width: 675;
-  height: 500;
 }
 
 #outside {
   margin: auto;
-  width: 675;
-  height: 500;
-  /* border: 1px solid #ff0000; */
+  width: 100%;
+  height: 100%;
+  /*border: 1px solid #ff0000;
 }
