--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@ body {
   overflow: hidden;
 }
 
-#outside {
+#outside { /* the canvas */
   margin: auto;
   width: 100%;
   height: 100%;
-  /*border: 1px solid #ff0000;*/
+  /* border: 1px solid #ff0000; */
 }
